<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true"
    android:paddingLeft="@dimen/_25sdp"
    android:paddingRight="@dimen/_25sdp"
    android:paddingBottom="@dimen/_20sdp"
    android:paddingTop="@dimen/_20sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mtoolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:src="@mipmap/icn_close_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:src="@mipmap/icn_home_white"
            android:tint="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivUserProfile"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@mipmap/profilepic_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivClose" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
 android:padding="@dimen/_5sdp"
            android:id="@+id/clEditProfile"
            android:layout_marginStart="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="@+id/ivUserProfile"
            app:layout_constraintStart_toEndOf="@+id/ivUserProfile"
            app:layout_constraintTop_toTopOf="@+id/ivUserProfile"

            >

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/museosansrounded_900_webfont"
                android:text="User Name"
                android:textColor="@color/baby_pink"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView

                android:id="@+id/tveditpro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/museosansrounded_500_webfont"
                android:text="Edit profile"
                android:textColor="@color/textlightBlack"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@+id/tvUserName"
                app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView

        android:id="@+id/tvUserStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_45sdp"
        android:drawableLeft="@mipmap/icn_user_green"
        android:drawablePadding="@dimen/_15sdp"
        android:fontFamily="@font/museosansrounded_700_webfont"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/user_statics"
        android:textColor="@color/textlightBlack"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@+id/mtoolbar" />

    <TextView
        android:id="@+id/tvReminders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:drawableLeft="@mipmap/icn_reminder_cyan"
        android:drawablePadding="@dimen/_15sdp"
        android:fontFamily="@font/museosansrounded_700_webfont"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/daily_reminder"
        android:textColor="@color/textlightBlack"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@+id/tvUserStats" />

    <TextView
        android:id="@+id/tvHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:drawableLeft="@mipmap/icn_help_cyan"
        android:drawablePadding="@dimen/_15sdp"
        android:fontFamily="@font/museosansrounded_700_webfont"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/help_support"
        android:textColor="@color/textlightBlack"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@+id/tvReminders" />

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:drawableLeft="@mipmap/icn_about_cyan"
        android:drawablePadding="@dimen/_15sdp"
        android:fontFamily="@font/museosansrounded_700_webfont"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/about"
        android:textColor="@color/textlightBlack"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@+id/tvHelp" />

    <TextView
        android:id="@+id/tvMembership"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:drawableLeft="@mipmap/icn_user_green"
        android:drawablePadding="@dimen/_15sdp"
        android:fontFamily="@font/museosansrounded_700_webfont"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/membership"
        android:textColor="@color/textlightBlack"
        android:textSize="@dimen/_14ssp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/tvAbout" />

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_45sdp"
        android:drawableLeft="@mipmap/icn_logout_cyan"
        android:drawablePadding="@dimen/_15sdp"
        android:fontFamily="@font/museosansrounded_700_webfont"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/logout"
        android:textColor="@color/textlightBlack"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@+id/tvMembership" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Version 1.20"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>