<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:focusable="true"
    android:clickable="true"
     android:layout_height="match_parent"
    android:fitsSystemWindows="true"
   >

    <LinearLayout
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@mipmap/img_login"
        android:orientation="vertical"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvcreateAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_90sdp"
        android:fontFamily="@font/museosansrounded_900_webfont"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/login_to_continue"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@id/tvcreateAcc"
        app:layout_constraintTop_toBottomOf="@id/tvcreateAcc" />


    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:src="@mipmap/icn_back_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/bgImage"
        app:layout_constraintHeight_percent="0.60"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/bgImage"
        app:layout_constraintTop_toTopOf="@+id/bgImage"
        app:layout_constraintVertical_bias="0.999">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:layout_marginTop="@dimen/_25sdp"
                    android:id="@+id/ivLoginB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/img_bg_shape" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fbContinue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_63sdp"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:backgroundTint="@color/baby_pink"
                    android:src="@mipmap/icn_next_arrow_white"
                    app:borderWidth="0dp" />

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="@dimen/_130sdp"
                    android:background="@color/colorWhite"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingRight="@dimen/_20sdp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:fontFamily="@font/museosansrounded_500_webfont"
                            android:hint="@string/email"
                            android:imeOptions="actionNext"
                            android:maxLines="1"
                            android:paddingTop="7dp"
                            android:singleLine="true"
                            android:textCursorDrawable="@null"
                            android:textSize="@dimen/_14ssp" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@color/grey" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        app:passwordToggleDrawable="@drawable/password_selector"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/edPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:fontFamily="@font/museosansrounded_700_webfont"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingTop="7dp"
                            android:singleLine="true"
                            android:textCursorDrawable="@null"
                            android:textSize="@dimen/_14ssp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:background="@color/grey" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp">

                        <TextView
                            android:id="@+id/tvforgotPass"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:fontFamily="@font/museosansrounded_500_webfont"
                            android:paddingTop="@dimen/_10sdp"
                            android:text="@string/forgot_password"
                            android:textColor="@color/baby_pink"
                            android:textSize="@dimen/_12ssp" />

                        <TextView
                            android:id="@+id/tvSignUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="@font/museosansrounded_500_webfont"
                            android:paddingTop="@dimen/_10sdp"
                            android:text="@string/signUP"
                            android:textColor="@color/baby_pink"
                            android:textSize="@dimen/_12ssp" />
                    </RelativeLayout>
                </LinearLayout>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>